<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.PackagePurchaseActivity">

    <ImageView
        android:id="@+id/purchase_summary_initial_banner"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:contentDescription="@string/purchase_summary_background_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@android:color/holo_orange_dark"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/purchase_summary_compliment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/purchase_summary_compliment"

        android:textAlignment="center"
        android:textColor="#FFF"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/purchase_summary_initial_banner"
        app:layout_constraintEnd_toEndOf="@+id/purchase_summary_initial_banner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/purchase_summary_initial_banner"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/purchase_summary_succesfully_fulfilled"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/purchase_summary_fullfilled"
        android:textAlignment="center"
        android:textColor="#FFF"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/purchase_summary_compliment"
        app:layout_constraintStart_toStartOf="@+id/purchase_summary_compliment"
        app:layout_constraintTop_toBottomOf="@+id/purchase_summary_compliment" />

    <androidx.cardview.widget.CardView
        android:layout_width="350dp"
        android:layout_height="350dp"
        app:cardBackgroundColor="@android:color/holo_blue_light"
        app:cardCornerRadius="20dp"
        app:layout_constraintTop_toBottomOf="@id/purchase_summary_succesfully_fulfilled"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/purchase_summary_succesfully_fulfilled"
        app:layout_constraintEnd_toEndOf="@id/purchase_summary_succesfully_fulfilled"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_margin="10dp"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/purchase_summary_check_summary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:textColor="@color/white"
                android:layout_marginEnd="8dp"
                android:text="@string/purchase_summary_check_summary"
                android:textSize="22sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <ImageView
                android:id="@+id/purchase_summary_image_summary"
                android:layout_width="0dp"
                android:layout_height="150dp"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/purchase_summary_image"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/purchase_summary_check_summary"
                app:srcCompat="@drawable/sao_paulo_sp" />

            <TextView
                android:id="@+id/purchase_summary_package_place"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:textColor="@color/white"
                android:textSize="22sp"
                app:layout_constraintStart_toStartOf="@id/purchase_summary_image_summary"
                app:layout_constraintEnd_toEndOf="@id/purchase_summary_image_summary"
                app:layout_constraintTop_toBottomOf="@+id/purchase_summary_image_summary"
                tools:text="São Paulo" />

            <TextView
                android:id="@+id/purchase_summary_travel_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="@+id/purchase_summary_package_place"
                app:layout_constraintEnd_toEndOf="@id/purchase_summary_package_place"
                app:layout_constraintTop_toBottomOf="@+id/purchase_summary_package_place"
                tools:text="08/12 - 10/12 de 2017" />

            <TextView
                android:id="@+id/purchase_summary_package_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="@+id/purchase_summary_travel_date"
                app:layout_constraintEnd_toEndOf="@id/purchase_summary_travel_date"
                app:layout_constraintTop_toBottomOf="@+id/purchase_summary_travel_date"
                tools:text="R$ 243,99" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>